Document how to run maddi on these projects (Maven plugin + Gradle compile-log)
Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>